<resources>
    <string name="app_name">LoriTS</string>
    <string name="pref_user">User</string>
    <string name="pref_server">Server</string>
    <string name="pref_user_login">Login</string>
    <string name="pref_user_password">Password</string>
    <string name="pref_server_host">Host</string>
    <string name="pref_server_port">Port</string>

    <string name="button_settings">Settings</string>
    <string name="button_refresh">Refresh</string>

    <string name="project_name">Project</string>
    <string name="task_name">Task</string>
    <string name="task_type">Task type</string>


    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="time_zero">0:00</string>


    <string name="edit">Edit</string>
    <string name="empty"></string>
    <string name="week_entry_save">Save</string>
    <string name="week_entry_delete">Delete</string>
    <string name="button_add">Add</string>
</resources>
