<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
   <PreferenceCategory
    android:key="pref_server"
    android:title="@string/pref_server">
       <EditTextPreference
           android:key="host"
           android:title="@string/pref_server_host"
           android:defaultValue="">
       </EditTextPreference>
       <EditTextPreference
           android:key="port"
           android:title="@string/pref_server_port"
           android:inputType="number"
           android:defaultValue="8080">
       </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="pref_user"
        android:title="@string/pref_user">
        <EditTextPreference
            android:key="login"
            android:defaultValue=""
            android:title="@string/pref_user_login">
        </EditTextPreference>
        <EditTextPreference
            android:key="password"
            android:title="@string/pref_user_password"
            android:inputType="textPassword">
        </EditTextPreference>
    </PreferenceCategory>
</PreferenceScreen>