<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/button_add"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/button_settings"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_black_24dp"
        android:title="@string/button_refresh"
        app:showAsAction="ifRoom"
        />

</menu>
