<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="ru.ssau.rest_app.WeekEntryActivity"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/project_name"
            android:id="@+id/week_entry_project" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/week_entry_project_value" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/task_name"
            android:id="@+id/week_entry_task" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/week_entry_task_value" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/task_type"
            android:id="@+id/week_entry_task_type" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/week_entry_task_type_value" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:rowCount="7"
            android:columnCount="2"
            >
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/monday"
                android:layout_row="0"
                android:layout_column="0"/>
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tuesday"
                android:layout_row="1"
                android:layout_column="0"/>
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/wednesday"
                android:layout_row="2"
                android:layout_column="0"/>
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/thursday"
                android:layout_row="3"
                android:layout_column="0"/>
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/friday"
                android:layout_row="4"
                android:layout_column="0"/>
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/saturday"
                android:layout_row="5"
                android:layout_column="0"/>
            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sunday"
                android:layout_row="6"
                android:layout_column="0"/>
            <!--
                   ЗНАЧЕНИЯ
            -->

            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_zero"
                android:id="@+id/monday_val"
                android:layout_row="0"
                android:layout_column="1"/>
            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_zero"
                android:id="@+id/tuesday_val"
                android:layout_row="1"
                android:layout_column="1"/>
            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_zero"
                android:id="@+id/wedensday_val"
                android:layout_row="2"
                android:layout_column="1"/>
            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_zero"
                android:id="@+id/thursday_val"
                android:layout_row="3"
                android:layout_column="1"/>
            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_zero"
                android:id="@+id/friday_val"
                android:layout_row="4"
                android:layout_column="1"/>
            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_zero"
                android:id="@+id/saturday_val"
                android:layout_row="5"
                android:layout_column="1"/>
            <TextView
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_zero"
                android:id="@+id/sunday_val"
                android:layout_row="6"
                android:layout_column="1"/>
        </GridLayout>
        <View
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="1"
            android:columnCount="2">

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/week_entry_save"
                android:id="@+id/week_entry_save_button"
                android:layout_column="0"
                android:layout_row="0"
                android:drawableRight="@drawable/ic_check_black_24dp"/>

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/week_entry_delete"
                android:id="@+id/week_entry_delte_button"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="right"
                android:drawableRight="@drawable/ic_close_black_24dp"/>
        </GridLayout>


    </LinearLayout>
</ScrollView>